@@ -2,6 +2,9 @@
 
         * src/openvrml/OpenVRML/vrml97node.cpp:  Added doc-comments.
 
+        * src/openvrml/OpenVRML/browser.cpp:  Use newer form of
+          UnsupportedInterface constructor.
+
 2002-12-26  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/node.h:  Made Node::visited private.
